i actually haven't imported new dolls into here in a damn long time

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,16 @@ dependencies:
   source_map_stack_trace: ^1.1.4
   archive: "^1.0.31"
   DollLibCorrect:
-    git: git@github.com:jadedResearcher/DollLibCorrect.git
+    git: git://github.com/FarragoFiction/DollLibCorrect.git
 
   RenderingLib:
-    git: git@github.com:jadedResearcher/RenderingLib.git
+    git: git://github.com/FarragoFiction/RenderingLib.git
 
   CommonLib:
               git: git://github.com/FarragoFiction/CommonLib.git
+
+  TextEngine:
+            git: git://github.com/FarragoFiction/TextEngine.git
 
 dev_dependencies:
   browser: ^0.10.0
